--- a/src/App.css
+++ b/src/App.css
@@ -302,7 +302,7 @@ ul li:hover {
    
 }
 
-@media (min-width:300px)and(max-width:812px){
+/* @media (min-width:300px)and(max-width:812px){
 ul li{
     height: 30px;
     line-height: 30px;
@@ -313,4 +313,4 @@ ul li{
 .nav-l{
     left: 150px;
 }
-}
+} */
